--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,18 +19,18 @@
         </testsuite>
     </testsuites>
 
-<!--     <filter>
+    <filter>
         <whitelist>
             <directory>src</directory>
-            <exclude>
+<!--             <exclude>
                 <directory>src/*/*Bundle/Resources</directory>
                 <directory>src/*/*Bundle/Tests</directory>
                 <directory>src/*/Bundle/*Bundle/Resources</directory>
                 <directory>src/*/Bundle/*Bundle/Tests</directory>
                 <directory>src/*/*/Bundle/*Bundle/Resources</directory>
                 <directory>src/*/*/Bundle/*Bundle/Tests</directory>
-            </exclude>
+            </exclude> -->
         </whitelist>
-    </filter> -->
+    </filter>
 
 </phpunit>
