--- a/travis.yml
+++ b/travis.yml
@@ -10,5 +10,5 @@ php:
 before_script:
   - composer install --prefer-dist
 
-script: phpunit --coverage-text
+script: phpunit tests/tp1 --coverage-text
 
